src/current/v25.4/logging-overview.md
---
title: Logging Overview
summary: Overview of the logging system and logging channels.
toc: true
docs_area: manage
---

If you need to monitor your cluster, tune performance, or [troubleshoot]({% link {{ page.version.version }}/troubleshooting-overview.md %}) issues, you can check the CockroachDB logs, which include details about notable cluster, node, and range-level events.

## Details

When a node starts, shuts down, or processes a [`cockroach` command]({% link {{ page.version.version }}/cockroach-commands.md %}), it produces a stream of messages about the command's activities. Each message is composed of:

- A payload that contains events either structured in JSON or conveyed in an arbitrary string. For details on structured event types and their fields, see [Notable Event Types]({% link {{ page.version.version }}/eventlog.md %}).
- An envelope that contains event metadata (e.g., severity, date, timestamp, channel). Depending on the log format you specify when [configuring logs]({% link {{ page.version.version }}/configure-logs.md %}#file-logging-format), the envelope can be formatted either in JSON or as a flat prefix to the message.

Messages are organized into appropriate [logging channels](#logging-channels) and then routed through log sinks. Each sink further processes and filters the messages before emitting them to destinations outside CockroachDB. The mapping of channels to sinks, as well as the processing and filtering done by each sink, is configurable and is intended to support multiple [use cases]({% link {{ page.version.version }}/logging-use-cases.md %}). For more information on configuring sinks and severity levels, see [Configure Logs]({% link {{ page.version.version }}/configure-logs.md %}).

{{site.data.alerts.callout_success}}
All [`cockroach` commands]({% link {{ page.version.version }}/cockroach-commands.md %}) support logging. However, note that most messages related to cluster operation are generated by [`cockroach start`]({% link {{ page.version.version }}/cockroach-start.md %}) or [`cockroach start-single-node`]({% link {{ page.version.version }}/cockroach-start-single-node.md %}). Other commands generate messages related to their own execution, which are mainly useful when troubleshooting the behaviors of those commands.
{{site.data.alerts.end}}

## Logging channels

{% include {{ page.version.version }}/log-channel-note.md %}

Log messages in CockroachDB are directed to logging channels, which can in turn be assigned to output to one or more [log sinks]({% link {{ page.version.version }}/configure-logs.md %}#configure-log-sinks).

This allows you to group channels that log related information (e.g., operational, security, or SQL events) into their own sinks. Each sink can output to a predetermined destination where the logs can be collected and parsed. For usage examples, see [Logging Use Cases]({% link {{ page.version.version }}/logging-use-cases.md %}).

| Channel                                             | Description                                                                                                                                                                                                                                                                                                                |
|-----------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| <a id="changefeed"></a><span class="version-tag">New in v25.4:</span> [`CHANGEFEED`]({% link {{ page.version.version }}/logging.md %})                | Changefeed events.<br><br>**Note**: [Changefeed telemetry events]({% link {{ page.version.version }}/eventlog.md %}#changefeed-telemetry-events), which are sent by default to the [`TELEMETRY`](#telemetry) channel in {{ page.version.version }} and earlier versions, will be routed by default to this channel  in a future major release.<br>To prepare for that change and assess potential downstream impacts on your logging setup and pipelines, review the [`log.channel_compatibility_mode.enabled`]({% link {{ page.version.version }}/logging-overview.md %}#log-channel_compatibility_mode-enabled) cluster setting. After reviewing the documentation, set `log.channel_compatibility_mode.enabled` to `false` in a non-production environment to log these events to this `CHANGEFEED` channel. |
| [`DEV`]({% link {{ page.version.version }}/logging.md %}#dev)                           | Uncategorized and debug messages.                                                                                                                                                                                                                                                                                          |
| [`KV_DISTRIBUTION`]({% link {{ page.version.version }}/logging.md %}#kv_distribution)   | Data distribution events, such as moving [replicas]({% link {{ page.version.version }}/architecture/overview.md %}#architecture-replica) between [stores]({% link {{ page.version.version }}/cockroach-start.md %}#store) in a cluster, adding replicas to [ranges]({% link {{ page.version.version }}/architecture/overview.md %}#range), and removing replicas from ranges. |
| <a id="kv_exec"></a><span class="version-tag">New in v25.4:</span> [`KV_EXEC`]({% link {{ page.version.version }}/logging.md %})                   | KV execution events that are not related to distribution.|
| [`HEALTH`]({% link {{ page.version.version }}/logging.md %}#health)                     | Resource usage; node-node connection events, including connection errors; up- and down-replication and range unavailability.                                                                                                                                                                                               |
| [`OPS`]({% link {{ page.version.version }}/logging.md %}#ops)                           | Process starts, stops, shutdowns, and crashes (if they can be logged); changes to cluster topology, such as node additions, removals, and decommissions.                                                                                                                                                                   |
| [`PRIVILEGES`]({% link {{ page.version.version }}/logging.md %}#privileges)             | Changes to privileges and object ownership.                                                                                                                                                                                                                                                                                |
| [`SENSITIVE_ACCESS`]({% link {{ page.version.version }}/logging.md %}#sensitive_access) | SQL audit events (when enabled via [`ALTER TABLE ... EXPERIMENTAL_AUDIT`]({% link {{ page.version.version }}/alter-table.md %}#experimental_audit)).                                                                                                                                                                                                                       |
| [`SESSIONS`]({% link {{ page.version.version }}/logging.md %}#sessions)                 | Client connections and disconnections (when enabled via the `server.auth_log.sql_connections.enabled` [cluster setting]({% link {{ page.version.version }}/cluster-settings.md %})); SQL authentication logins/attempts and session/query terminations (when enabled via the `server.auth_log.sql_sessions.enabled` [cluster setting]({% link {{ page.version.version }}/cluster-settings.md %})). |
| <a id="sql_exec"></a>[`SQL_EXEC`]({% link {{ page.version.version }}/logging.md %}#sql_exec)                 | SQL statement executions (when enabled via the `sql.trace.log_statement_execute` [cluster setting]({% link {{ page.version.version }}/cluster-settings.md %})) and uncaught Go panic errors during SQL statement execution.<br><br>**Warning**: Logging cluster-wide executions by enabling the `sql.trace.log_statement_execute` cluster setting will incur considerable overhead and may have a negative performance impact.<br><br>**Note**: In a future release, the following events will be routed to this channel:<ul><li>[SQL Slow Query Log]({% link {{ page.version.version }}/eventlog.md %}#sql-slow-query-log)</li><li>[SQL Slow Query Log (Internal)]({% link {{ page.version.version }}/eventlog.md %}#sql-slow-query-log-internal)</li><li>[`sampled_query` ]({% link {{ page.version.version }}/eventlog.md %}#sampled_query)</li><li>[`sampled_transaction`]({% link {{ page.version.version }}/eventlog.md %}#sampled_transaction)</li></ul>To prepare for that change and assess potential downstream impacts on your logging setup and pipelines, set the [`log.channel_compatibility_mode.enabled`](#log-channel_compatibility_mode-enabled) cluster setting to `false` in a non-production environment. This will log these events to this `SQL_EXEC` channel.  |
| <a id="sql_perf"></a>[`SQL_PERF`]({% link {{ page.version.version }}/logging.md %}#sql_perf)                 | SQL executions that impact performance, such as slow queries (enabled via the `sql.log.slow_query.latency_threshold` and `sql.log.slow_query.experimental_full_table_scans.enabled` [cluster settings]({% link {{ page.version.version }}/cluster-settings.md %})).<br><br>**Note**: The `SQL_PERF` and `SQL_INTERNAL_PERF` channels will be removed in a future release. [SQL Slow Query Log]({% link {{ page.version.version }}/eventlog.md %}#sql-slow-query-log) and [SQL Slow Query Log (Internal)]({% link {{ page.version.version }}/eventlog.md %}#sql-slow-query-log-internal) events currently sent to the `SQL_PERF` and [`SQL_INTERNAL_PERF`]({% link {{ page.version.version }}/logging.md %}#sql_internal_perf) channels, respectively, will be routed to the [`SQL_EXEC`](#sql_exec) channel in a future release. Internal queries are tagged as `internal`, allowing users to filter them out downstream.<br><br>To prepare for that change and assess potential downstream impacts on your logging setup and pipelines, set the [`log.channel_compatibility_mode.enabled`](#log-channel_compatibility_mode-enabled) cluster setting to `false` in a non-production environment. This logs these events to the [`SQL_EXEC`](#sql_exec) channel. |
| [`SQL_SCHEMA`]({% link {{ page.version.version }}/logging.md %}#sql_schema)             | Database, schema, table, sequence, view, and type creation; changes to table columns and sequence parameters.                                                                                                                                                                                                              |
| [`STORAGE`]({% link {{ page.version.version }}/logging.md %}#storage)                   | Low-level storage logs from the [Pebble storage engine]({% link {{ page.version.version }}/architecture/storage-layer.md %}#pebble).                                                                                                                                                                                                                           |
| <a id="telemetry"></a>[`TELEMETRY`]({% link {{ page.version.version }}/logging.md %}#telemetry)               | Telemetry events for internal usage, except for [`sampled_query`]({% link {{ page.version.version }}/eventlog.md %}#sampled_query) and [`sampled_transaction`]({% link {{ page.version.version }}/eventlog.md %}#sampled_transaction) events which may be [logged externally to Datadog]({% link {{ page.version.version }}/log-sql-activity-to-datadog.md %}).<br><br>**Note**: `sampled_query` and `sampled_transaction` events, which are sent by default to this channel in {{ page.version.version }} and earlier versions, will instead be routed by default to the [`SQL_EXEC`](#sql_exec) channel in a future major release. [Changefeed telemetry events]({% link {{ page.version.version }}/eventlog.md %}#changefeed-telemetry-events), which are sent by default to this channel in {{ page.version.version }} and earlier versions, will instead be routed by default to the [`CHANGEFEED`](#changefeed) channel in a future major release.<br>To prepare for these changes and assess potential downstream impacts on your logging setup and pipelines, review the [`log.channel_compatibility_mode.enabled`]({% link {{ page.version.version }}/logging-overview.md %}#log-channel_compatibility_mode-enabled) cluster setting. After reviewing the documentation, set `log.channel_compatibility_mode.enabled` to `false` in a non-production environment to log these events to their new channels. |
| [`USER_ADMIN`]({% link {{ page.version.version }}/logging.md %}#user_admin)             | Changes to users, roles, and authentication credentials.                                                                                                                                                                                                                                                                   |

Logging channels are analogous to [logging facilities in Syslog](https://wikipedia.org/wiki/Syslog) or [logging services in Datadog](https://docs.datadoghq.com/logs/log_collection/?tab=http#reserved-attributes). For more details on the contents of each logging channel, see the [Logging reference]({% link {{ page.version.version }}/logging.md %}#logging-channels).

### `log.channel_compatibility_mode.enabled`

{% include_cached new-in.html version="v25.4" %} The `log.channel_compatibility_mode.enabled` [cluster setting]({% link {{ page.version.version }}/cluster-settings.md %}) controls logging channel behavior. When set to:

- `true` (default): Logs are sent to the standard [logging channels](#logging-channels). This maintains the behavior in v25.3 and earlier supported versions. Specifically, the system sends:

  - [Changefeed telemetry events]({% link {{ page.version.version }}/eventlog.md %}#changefeed-telemetry-events) to the [`TELEMETRY`](#telemetry) channel.
  - [SQL Slow Query Log]({% link {{ page.version.version }}/eventlog.md %}#sql-slow-query-log) and [SQL Slow Query Log (Internal)]({% link {{ page.version.version }}/eventlog.md %}#sql-slow-query-log-internal) events to the [`SQL_PERF`](#sql_perf) and [`SQL_INTERNAL_PERF`]({% link {{ page.version.version }}/logging.md %}#sql_internal_perf) channels, respectively.
  - [`sampled_query`]({% link {{ page.version.version }}/eventlog.md %}#sampled_query) and [`sampled_transaction`]({% link {{ page.version.version }}/eventlog.md %}#sampled_transaction) events to the [`TELEMETRY`](#telemetry) channel.

- `false`: Logs are sent to updated logging channels. Specifically, the system sends:

  - [Changefeed telemetry events]({% link {{ page.version.version }}/eventlog.md %}#changefeed-telemetry-events) to the [`CHANGEFEED`](#changefeed) channel.
  - [SQL Slow Query Log]({% link {{ page.version.version }}/eventlog.md %}#sql-slow-query-log) and [SQL Slow Query Log (Internal)]({% link {{ page.version.version }}/eventlog.md %}#sql-slow-query-log-internal) events to the [`SQL_EXEC`](#sql_exec) channel.
  - [`sampled_query`]({% link {{ page.version.version }}/eventlog.md %}#sampled_query) and [`sampled_transaction`]({% link {{ page.version.version }}/eventlog.md %}#sampled_transaction) events to the [`SQL_EXEC`](#sql_exec) channel.

{{site.data.alerts.callout_danger}}
In a future release, `log.channel_compatibility_mode.enabled` is expected to default to `false`. To prepare for that change and assess potential downstream impacts on your logging setup and pipelines, set the `log.channel_compatibility_mode.enabled` cluster setting to `false` in a non-production environment.
{{site.data.alerts.end}}

## Logging destinations

When using the [default logging configuration]({% link {{ page.version.version }}/configure-logs.md %}#default-logging-configuration), the events collected on each [logging channel](#logging-channels) are split into log files as follows:

| Filename                   | Description             | Channels                    |
|----------------------------+-------------------------+-----------------------------|
| `cockroach.log`            | General CockroachDB log | `DEV`                       |
| `cockroach-changefeed.log` | Changefeed log          | `CHANGEFEED`                |
| `cockroach-health.log`     | Health log              | `HEALTH`                    |
| `cockroach-kv-distribution.log` | Data distribution log | `KV_DISTRIBUTION`        |
| `cockroach-kv-exec.log`    | KV execution log        | `KV_EXEC`                   |
| `cockroach-security.log`   | SQL security log        | `PRIVILEGES` + `USER_ADMIN` |
| `cockroach-sql-audit.log`  | SQL access audit log    | `SENSITIVE_ACCESS`          |
| `cockroach-sql-auth.log`   | SQL authentication log  | `SESSIONS`                  |
| `cockroach-sql-exec.log`   | SQL execution log       | `SQL_EXEC`                  |
| `cockroach-sql-slow.log`   | SQL slow query log      | `SQL_PERF`                  |
| `cockroach-sql-schema.log` | SQL schema change log   | `SQL_SCHEMA`                |
| `cockroach-pebble.log`     | Pebble log              | `STORAGE`                   |
| `cockroach-telemetry.log`  | Telemetry log           | `TELEMETRY`                 |

Logging destinations and many other parameters are configurable via YAML. For details, see [Configure Logs]({% link {{ page.version.version }}/configure-logs.md %}).

## See also

- [Configure logs]({% link {{ page.version.version }}/configure-logs.md %})
- [Logging Levels and Channels]({% link {{ page.version.version }}/logging.md %})
- [Log formats]({% link {{ page.version.version }}/log-formats.md %})
- [Notable Event Types]({% link {{ page.version.version }}/eventlog.md %})
